--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
   </body>
 
   <script>
-    function postMessage() {
-      console.log("mmm du trykka på mæææ");
+    async function postMessage() {
+      console.log('mmm du trykka på mæææ');
+
+      const API_ENDPOINT = 'http://localhost:8080';
+
+      const response = await fetch(API_ENDPOINT, {
+        method: 'GET',
+        headers: {},
+        body: undefined
+      });
+
+      console.log(response);
     }
   </script>
 </html>
