--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
   <script>
     async function postMessage() {
-      console.log('mmm du trykka på mæææ');
-
-      const API_ENDPOINT = 'http://localhost:8080';
+      const API_ENDPOINT = "http://localhost:8080/api";
 
       const response = await fetch(API_ENDPOINT, {
-        method: 'GET',
+        method: "GET",
         headers: {},
         body: undefined
       });
 
-      console.log(response);
+      const json = await response.json();
+
+      console.log(json);
     }
   </script>
 </html>
