POST Successfull, directions from client to server OK

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           Accept: "application/json",
           "Content-Type": "application/json"
         },
-        body: {
+        body: JSON.stringify({
           direction: direction
-        }
+        })
       });
 
       const json = await response.json();
