--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   </body>
 
   <script>
-    async function postMessage(direction) {
-      const API_ENDPOINT = "http://localhost:8080/api";
+    var url = document.URL;
 
+    async function postMessage(direction) {
+      const API_ENDPOINT = url + "api";
       const response = await fetch(API_ENDPOINT, {
         method: "POST",
         headers: {
